--- a/libs/ui/src/lib/global-modal/global-modal.component.html
+++ b/libs/ui/src/lib/global-modal/global-modal.component.html
@@ -4,6 +4,6 @@
   </button>
 </mat-dialog-header>
 
-<mat-dialog-content class="mat-dialog-content" fxLayout="column" fxLayoutAlign="start center">
+<mat-dialog-content class="mat-dialog-content" fxLayout="column">
   <ng-content></ng-content>
 </mat-dialog-content>
