--- a/libs/ui/src/lib/static-informations/contact/contact.component.html
+++ b/libs/ui/src/lib/static-informations/contact/contact.component.html
@@ -23,7 +23,7 @@
       </mat-form-field>
     </form>
     <div fxLayout="row" fxLayoutAlign="center">
-      <button (click)="sendMessage()" type="submit" color="primary" mat-stroked-button>
+      <button (click)="sendMessage()" type="submit" color="accent" mat-stroked-button>
         <mat-icon svgIcon="mail"></mat-icon>
         <span>Send a message</span>
       </button>
