--- a/apps/catalog/catalog/src/app/landing/landing.component.html
+++ b/apps/catalog/catalog/src/app/landing/landing.component.html
@@ -84,7 +84,7 @@
     <section fxLayout="column" fxLayoutAlign="start center" class="dark-contrast-theme join" fxLayoutGap="40px">
       <h2 class="mat-display-2">Subscribe for free!</h2>
       <p>We take 10% commission when there is a deal</p>
-      <a mat-flat-button color="primary" routerLink="/auth/identity">
+      <a mat-flat-button color="accent" routerLink="/auth/identity">
         <span>Join now</span>
         <mat-icon svgIcon="arrow_forward"></mat-icon>
       </a>
