--- a/libs/ui/src/lib/snackbar/link/snackbar-link.component.html
+++ b/libs/ui/src/lib/snackbar/link/snackbar-link.component.html
@@ -1,2 +1,2 @@
 <span>{{ data.message }}</span>
-<a class="snack-bar-button" [routerLink]="data.link" (click)="snackBarRef.dismiss()" [attr.test-id]="data.test" mat-button>{{ data.linkName }}</a>
+<a class="snack-bar-button" [routerLink]="data.link" (click)="snackBarRef.dismiss()" [attr.test-id]="data.testId" mat-button>{{ data.linkName }}</a>
