more tests + beginning of refacto WIP

--- a/apps/festival/festival/src/app/dashboard/dashboard.component.html
+++ b/apps/festival/festival/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <layout-dashboard>
   <aside fxLayout="column" fxLayoutAlign="space-between">
     <mat-nav-list fxFlex>
-      <a mat-list-item routerLink="home" routerLinkActive="active">
+      <a mat-list-item routerLink="home" routerLinkActive="active" test-id="dashboard">
         <mat-icon matListIcon svgIcon="dashboard"></mat-icon>
         <span matLine><b>Dashboard</b></span>
       </a>
