--- a/libs/event/src/lib/form/meeting/meeting.component.html
+++ b/libs/event/src/lib/form/meeting/meeting.component.html
@@ -26,7 +26,8 @@
       cdkTextareaAutosize
       #autosize="cdkTextareaAutosize"
       cdkAutosizeMinRows="4"
-      maxlength="500"></textarea>
+      maxlength="500"
+      test-id="description"></textarea>
     <mat-hint>Limited to 500 characters.</mat-hint>
   </mat-form-field>
 </section>
