--- a/libs/event/src/lib/form/edit-details/edit-details.component.html
+++ b/libs/event/src/lib/form/edit-details/edit-details.component.html
@@ -42,7 +42,7 @@
     </mat-radio-group>
 
     <div fxLayout fxLayoutAlign="start center" fxLayoutGap="8px" *ngIf="form.value.type !== 'meeting'">
-      <mat-checkbox formControlName="isSecret" color="primary">SECRET - not listed on the Marketplace</mat-checkbox>
+      <mat-checkbox formControlName="isSecret" color="primary" test-id="secret">SECRET - not listed on the Marketplace</mat-checkbox>
       <mat-icon svgIcon="info" matTooltip="Only users with a direct link will be able to access your event."></mat-icon>
     </div>
   </div>
