--- a/libs/event/src/lib/form/slate/slate.component.html
+++ b/libs/event/src/lib/form/slate/slate.component.html
@@ -33,14 +33,15 @@
           cdkTextareaAutosize
           #autosize="cdkTextareaAutosize"
           cdkAutosizeMinRows="4"
-          maxlength="500"></textarea>
+          maxlength="500"
+          test-id="description"></textarea>
         <mat-hint>Limited to 500 characters.</mat-hint>
       </mat-form-field>
       <!-- Title selection-->
       <mat-form-field appearance="outline">
         <mat-label>{{titles.length ? 'Select the titles you are going to promote' : 'You have no titles to select'}}</mat-label>
-        <mat-select formControlName="titleIds" [disabled]="!titles.length" multiple>
-          <mat-option *ngFor="let title of titles" [value]="title.id">
+        <mat-select formControlName="titleIds" [disabled]="!titles.length" multiple test-id="titles">
+          <mat-option *ngFor="let title of titles; let i= index" [value]="title.id" [attr.test-id]="'titles_' + i">
             {{ title.title.international }}
           </mat-option>
         </mat-select>
