comeback to initial color (seen with Stephanie)

--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -75,7 +75,7 @@
         </div>
       </article>
       <h3>Or</h3>
-      <button (click)="openIntercom()" mat-flat-button color="accent">
+      <button (click)="openIntercom()" mat-flat-button color="primary">
         Contact the {{ app | appName }} team
       </button>
     </section>
