--- a/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
+++ b/apps/catalog/catalog/src/app/dashboard/title/list/list.component.html
@@ -100,7 +100,7 @@
       </mat-card>
     </article>
     <h3>Or</h3>
-    <button (click)="openIntercom()" mat-flat-button color="accent">
+    <button (click)="openIntercom()" mat-flat-button color="primary>
       Contact the {{ app | appName }} team
     </button>
   </section>
