--- a/libs/contract/src/lib/term/components/detailed/detailed.component.html
+++ b/libs/contract/src/lib/term/components/detailed/detailed.component.html
@@ -1,8 +1,7 @@
 <global-modal>
   <header>
-    <h2>{{ data.scope | titlecase }}</h2>
+    <h2>{{ data.scope | mediaToRights | titlecase }}</h2>
   </header>
-
   <section>
     <ng-container *ngIf="(groups$ | async) as groups">
       <ng-container *ngIf="!!groups.length; else default">
