--- a/libs/contract/src/lib/contract/components/confirm-decline/confirm-decline.component.html
+++ b/libs/contract/src/lib/contract/components/confirm-decline/confirm-decline.component.html
@@ -1,35 +1,37 @@
-<h1>Please give a reason for your refusal.</h1>
-<p>This will help the Archipel Content team understand your refusal<br />
-  and lead the deal negotiation accordingly.</p>
-<form fxLayout="column" [formGroup]="form" (ngSubmit)="decline()">
-  <mat-form-field appearance="outline">
-    <mat-label>Reason of refusal</mat-label>
-    <mat-select formControlName="reason">
-      <mat-option *ngFor="let reason of reasons[data.type]" [value]="reason">
-        {{reason}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field appearance="outline">
-    <textarea matInput
-      placeholder='"Offer price is too low", "Title is not available anymore", "Bad previous experience with buyer"'
-      cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="4" maxlength="500"
-      test-id="specific-terms" formControlName="message">
-    </textarea>
-    <mat-hint>Please specify why you want to decline this offer.</mat-hint>
-  </mat-form-field>
-  <div *ngIf="data.showAcceptTermsCheckbox" class="validation-checkbox" fxLayout="column" fxLayoutAlign="center center">
-    <p><strong>Before you accept this contract, please agree on the following:</strong></p>
-    <mat-checkbox formControlName="acceptTerms">
-      I hereby accept the policy regarding accepted offers, as mentioned in the <a [routerLink]="termsPath" target="_blank">Terms and Conditions.</a>
-    </mat-checkbox>
-  </div>
-  <footer fxLayout="column" fxLayoutAlign="center center">
-    <button mat-flat-button color="primary" [disabled]="data.showAcceptTermsCheckbox && !form.get('acceptTerms').value" type="submit">
-      Confirm refusal
-    </button>
-    <button mat-button (click)="cancel()" type="button">
-      Cancel
-    </button>
-  </footer>
-</form>
+<global-modal>
+  <h1>Please give a reason for your refusal.</h1>
+  <p>This will help the Archipel Content team understand your refusal<br />
+    and lead the deal negotiation accordingly.</p>
+  <form fxLayout="column" [formGroup]="form" (ngSubmit)="decline()">
+    <mat-form-field appearance="outline">
+      <mat-label>Reason of refusal</mat-label>
+      <mat-select formControlName="reason">
+        <mat-option *ngFor="let reason of reasons[data.type]" [value]="reason">
+          {{reason}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <textarea matInput
+        placeholder='"Offer price is too low", "Title is not available anymore", "Bad previous experience with buyer"'
+        cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="4" maxlength="500"
+        test-id="specific-terms" formControlName="message">
+      </textarea>
+      <mat-hint>Please specify why you want to decline this offer.</mat-hint>
+    </mat-form-field>
+    <div *ngIf="data.showAcceptTermsCheckbox" class="validation-checkbox" fxLayout="column" fxLayoutAlign="center center">
+      <p><strong>Before you accept this contract, please agree on the following:</strong></p>
+      <mat-checkbox formControlName="acceptTerms">
+        I hereby accept the policy regarding accepted offers, as mentioned in the <a [routerLink]="termsPath" target="_blank">Terms and Conditions.</a>
+      </mat-checkbox>
+    </div>
+    <footer fxLayout="column" fxLayoutAlign="center center">
+      <button mat-flat-button color="primary" [disabled]="data.showAcceptTermsCheckbox && !form.get('acceptTerms').value" type="submit">
+        Confirm refusal
+      </button>
+      <button mat-button (click)="cancel()" type="button">
+        Cancel
+      </button>
+    </footer>
+  </form>
+</global-modal>
