7841 vanity metrics and table

--- a/libs/analytics/src/lib/components/metric-card/metric-card.component.scss
+++ b/libs/analytics/src/lib/components/metric-card/metric-card.component.scss
@@ -1,26 +1,22 @@
-analytics-metric-card {
-  section {
-    display: flex;
-    width: 220px;
-    flex-direction: column;
-    text-align: center;
+:host {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
 
-    .icon-wrapper {
-      background-color: var(--primary-lighter);
-      border-radius: 4px;
-      height: 40px;
-    
-      .mat-icon {
-        path, g, polygon {
-          fill: #fff;
-        }
-      }
-    
-      mat-icon {
-        display: block;
-        height: 100%;
-        margin: auto;
-      }
-    }
+div {
+  background-color: var(--primary-lighter);
+  border-radius: 4px;
+  padding: 8px 0;
+
+  mat-icon {
+    display: block;
+    margin: auto;
+    color: var(--primary-lighter-contrast);
   }
+}
+
+span {
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
