--- a/libs/organization/src/lib/organization/components/wishlist-button/wishlist-button.component.scss
+++ b/libs/organization/src/lib/organization/components/wishlist-button/wishlist-button.component.scss
@@ -1,7 +1,3 @@
-wishlist-button {
-  .mat-icon {
-    path, g, polygon {
-      fill: var(--primary-contrast);
-    }
-  }
+mat-icon {
+  color: var(--primary-contrast);
 }
