--- a/libs/analytics/src/lib/components/metric-card/metric-card.component.html
+++ b/libs/analytics/src/lib/components/metric-card/metric-card.component.html
@@ -1,7 +1,5 @@
-<section class="surface">
-  <div class="icon-wrapper">
-    <mat-icon [svgIcon]="icon"></mat-icon>
-  </div>
-  <span><b>{{ value }}</b></span>
-  <span class="mat-caption">{{ title }}</span>
-</section>
+<div>
+  <mat-icon [svgIcon]="icon"></mat-icon>
+</div>
+<span><b>{{ value }}</b></span>
+<span class="mat-caption">{{ title }}</span>
