--- a/styles/themes/builder.scss
+++ b/styles/themes/builder.scss
@@ -214,5 +214,6 @@
   --foreground-text: #{mat.get-color-from-palette($foreground, 'text')};
   --foreground-base: #{mat.get-color-from-palette($foreground, 'base')};
   --primary-lighter: #{mat.get-color-from-palette($primary, 200)};
+  --primary-lighter-contrast: #{mat.get-color-from-palette($primary, 'lighter-contrast')};
 }
 
