--- a/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/avails/explanation/explanation.component.html
@@ -1,32 +1,27 @@
-<section fxLayout fxLayoutAlign="end">
-  <button mat-icon-button (click)="close()">
-    <mat-icon svgIcon="close"></mat-icon>
-  </button>
-</section>
+<global-modal>
+  <section fxlayout="column" fxLayoutGap="32px">
+    <h1>How It Works</h1>
 
-<section fxlayout="column" fxLayoutGap="32px">
-  <h1>How It Works</h1>
+    <mat-tab-group>
+      <mat-tab label="Multi-territories">
+        <ng-template matTabContent>
+          <p><strong>Multi-territories</strong> view will show the territories that are available according to your search on a map. You just need to point out the dates, terms and exclusivity you need.</p>
+          <video controls src="assets/videos/learn_map.mp4"></video>
+        </ng-template>
+      </mat-tab>
+      <mat-tab label="Single-territory">
+        <ng-template matTabContent>
+          <p><strong>Single-territory</strong> view will show the calendar with availabilities for the territories and rights you've pointed out. Just select the start and end date and your term will be created.</p>
+          <video controls src="assets/videos/learn_calendar.mp4"></video>
+        </ng-template>
+      </mat-tab>
+    </mat-tab-group>
 
-  <mat-tab-group>
-    <mat-tab label="Multi-territories">
-      <ng-template matTabContent>
-        <p><strong>Multi-territories view</strong> will show the territories that are available according to your search on a map. You just need to point out the terms, rights and exclusivity you need.</p>
-        <video controls src="assets/videos/learn_map.mp4"></video>
-      </ng-template>
-    </mat-tab>
-    <mat-tab label="Single-territory">
-      <ng-template matTabContent>
-        <p><strong>Single-territory view</strong> will show the calendar with availabilities for the territories and rights you've pointed out. Just select the start and end date and your right will be created.</p>
-        <video controls src="assets/videos/learn_calendar.mp4"></video>
-      </ng-template>
-    </mat-tab>
-  </mat-tab-group>
-
-  <div mat-dialog-actions fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" class="actions">
-    <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
-    <button mat-button color="primary" (click)="openIntercom()">
-      Ask a question
-    </button>
-  </div>
-
-</section>
+    <div mat-dialog-actions fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px" class="actions">
+      <button mat-flat-button color="primary" (click)="close()">GOT IT!</button>
+      <button mat-button color="primary" (click)="openIntercom()">
+        Ask a question
+      </button>
+    </div>
+  </section>
+</global-modal>
