--- a/libs/analytics/src/lib/components/pie-chart/pie-chart.component.scss
+++ b/libs/analytics/src/lib/components/pie-chart/pie-chart.component.scss
@@ -5,7 +5,6 @@
 
 header {
   display: flex;
-  align-items: center;
   gap: 8px;
 }
 
@@ -20,4 +19,9 @@ img {
 
 button {
   margin-left: auto;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
 }
