--- a/apps/festival/festival/src/app/dashboard/home/home.component.html
+++ b/apps/festival/festival/src/app/dashboard/home/home.component.html
@@ -15,26 +15,36 @@
       </div>   
     </header>
     <section class="surface carousel-container">
-      <header *ngIf="popularTitle$ | async as title">
-        <h3>{{ title.title.international }}</h3>
-        <a mat-flat-button [routerLink]="['title', title.id]">
-          <span>See Analytics details</span>
-          <mat-icon svgIcon="arrow_forward"></mat-icon>
-        </a>
-      </header>
-      <bf-carousel flex layout>
-        <analytics-pie-chart class="surface" carouselItem [data]="orgActivityOfPopularTitle$ | async"></analytics-pie-chart>
-        <analytics-map class="surface" carouselItem [data]="territoryActivityOfPopularTitle$ | async"></analytics-map>
-        <analytics-line-chart class="surface" carouselItem [eventNames]="interactions" [data]="interactionsOfPopularTitle$ | async">
-          <mat-icon svgIcon="switch_access_shortcut"></mat-icon>
-          <h5>Interactions</h5>
-        </analytics-line-chart>
-        <analytics-line-chart class="surface" carouselItem [eventNames]="['pageView']" [data]="pageViewsOfPopularTitle$ | async">
-          <mat-icon svgIcon="visibility"></mat-icon>
-          <h5>Film Page Views</h5>
-        </analytics-line-chart>
-      </bf-carousel>
-      <a mat-flat-button class="see_titles" routerLink="title">
+      <ng-container *ngIf="popularTitle$ | async as title else loading">
+        <header>
+          <h3>{{ title.title.international }}</h3>
+          <a mat-button [routerLink]="['title', title.id]">
+            <span>See Analytics details</span>
+            <mat-icon svgIcon="arrow_forward"></mat-icon>
+          </a>
+        </header>
+        <bf-carousel flex layout>
+          <analytics-pie-chart class="surface" carouselItem [data]="orgActivityOfPopularTitle$ | async"></analytics-pie-chart>
+          <analytics-map class="surface" carouselItem [data]="territoryActivityOfPopularTitle$ | async"></analytics-map>
+          <analytics-line-chart class="surface" carouselItem [eventNames]="interactions" [data]="interactionsOfPopularTitle$ | async">
+            <mat-icon svgIcon="switch_access_shortcut"></mat-icon>
+            <div>
+              <h5>Interactions</h5>
+              <p class="mat-caption">Learn how people interact with your Title.</p>
+            </div>
+
+          </analytics-line-chart>
+          <analytics-line-chart class="surface" carouselItem [eventNames]="['pageView']" [data]="pageViewsOfPopularTitle$ | async">
+            <mat-icon svgIcon="visibility"></mat-icon>
+            <div>
+              <h5>Film Page Views</h5>
+              <p class="mat-caption">See how many Buyers viewed your Film Page recently.</p>
+            </div>
+            </analytics-line-chart>
+        </bf-carousel>
+      </ng-container>
+
+      <a mat-button class="see_titles" routerLink="title">
         <span>View all Titles Activity</span>
         <mat-icon svgIcon="arrow_forward"></mat-icon>
       </a>
