--- a/libs/analytics/src/lib/components/line-chart/line-chart.component.html
+++ b/libs/analytics/src/lib/components/line-chart/line-chart.component.html
@@ -1,24 +1,33 @@
 <header>
   <ng-content></ng-content>
 </header>
-<ng-container *ngIf="lineChartOptions.series?.length; else noData">
-  <section>
-    <button mat-button [disabled]="period === 'day'" (click)="changePeriod('day')">Per day</button>
-    <button mat-button [disabled]="period === 'week'" (click)="changePeriod('week')">Per week</button>
-    <button mat-button [disabled]="period === 'month'" (click)="changePeriod('month')">Per month</button>
-  </section>
-  <apx-chart
-    #chart
-    [series]="lineChartOptions.series"
-    [chart]="lineChartOptions.chart"
-    [theme]="lineChartOptions.theme"
-    [legend]="lineChartOptions.legend"
-    [yaxis]="lineChartOptions.yaxis"
-    [xaxis]="lineChartOptions.xaxis"
-    [dataLabels]="lineChartOptions.dataLabels"
-    [stroke]="lineChartOptions.stroke"
-  ></apx-chart>
+<ng-container *ngIf="!isLoading else loading">
+  <ng-container *ngIf="lineChartOptions.series?.length; else empty">
+    <section>
+      <button mat-button [disabled]="period === 'day'" (click)="changePeriod('day')">Per day</button>
+      <button mat-button [disabled]="period === 'week'" (click)="changePeriod('week')">Per week</button>
+      <button mat-button [disabled]="period === 'month'" (click)="changePeriod('month')">Per month</button>
+    </section>
+    <apx-chart
+      #chart
+      [series]="lineChartOptions.series"
+      [chart]="lineChartOptions.chart"
+      [theme]="lineChartOptions.theme"
+      [legend]="lineChartOptions.legend"
+      [yaxis]="lineChartOptions.yaxis"
+      [xaxis]="lineChartOptions.xaxis"
+      [dataLabels]="lineChartOptions.dataLabels"
+      [stroke]="lineChartOptions.stroke"
+    ></apx-chart>
+  </ng-container>
 </ng-container>
-<ng-template #noData>
+
+<ng-template #empty>
   <img asset="empty_line_chart.svg" alt="Line chart">
+</ng-template>
+
+<ng-template #loading>
+  <article class="loading">
+    <mat-spinner color="primary"></mat-spinner>
+  </article>
 </ng-template>
