--- a/libs/analytics/src/lib/components/map/map.component.scss
+++ b/libs/analytics/src/lib/components/map/map.component.scss
@@ -4,7 +4,6 @@
 
 header {
   display: flex;
-  align-items: center;
   gap: 8px;
 }
 
@@ -23,4 +22,9 @@ img {
 
 button {
   margin-left: auto;
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
 }
