align icons - nav movie tunnel

--- a/libs/ui/src/lib/tunnel/layout/nav/nav.component.html
+++ b/libs/ui/src/lib/tunnel/layout/nav/nav.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngFor="let step of steps; let isLast = last">
   <!-- if step has only one route, use a mat list -->
   <mat-nav-list *ngIf="step.routes.length === 1; else multipleLinks">
-    <a mat-list-item [routerLink]="step.routes[0].path" routerLinkActive="active">
+    <a class="align-icon" mat-list-item [routerLink]="step.routes[0].path" routerLinkActive="active">
       <mat-icon [svgIcon]="step.icon"></mat-icon>
       <span class="mat-expansion-panel-header-title">{{ step.title }}</span>
     </a>
