Fix modal holdbacks functionnality

--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -77,7 +77,7 @@
   </bf-form-table>
 
   <footer class="actions" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="16px">
-    <button mat-flat-button color="primary" (click)="saveAndClose(data.save)" [disabled]="false">Add Holdbacks</button>
+    <button mat-flat-button color="primary" (click)="saveAndClose()" [disabled]="false">Add Holdbacks</button>
     <button mat-button (click)="close()">Cancel</button>
   </footer>
 </global-modal>
