--- a/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
+++ b/apps/catalog/catalog/src/app/marketplace/title/selection/specific-terms/specific-terms.component.html
@@ -1,6 +1,6 @@
 <global-modal>
   <section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="12px" >
-    <h1>Specific Terms</h1>
+    <h2>Specific Terms</h2>
     <p>Please indicate any specific conditions you'd like to request for this deal.</p>
     <form [formGroup]="form" fxLayout="column" (ngSubmit)="createOffer()">
       <mat-form-field appearance="outline">
@@ -29,11 +29,11 @@
           test-id="delivery-list">
         </textarea>
       </mat-form-field>
-      <!-- <mat-checkbox class="example-margin" formControlName="acceptTerms">
+      <mat-checkbox class="example-margin" formControlName="acceptTerms">
         <p>
           I confirm that I have read and agree the <a routerLink="/c/o/marketplace/terms" target="_blank">Terms & Conditions</a> that will applied to the offer.
         </p>
-      </mat-checkbox> -->
+      </mat-checkbox>
       <footer fxLayout="column" fxLayoutAlign="center center">
         <button mat-flat-button color="primary" [disabled]="form.disabled || !form.value.acceptTerms" type="submit"
           test-id="send-offer">
