Update modal: Holdback exist for this rights

--- a/libs/contract/src/lib/contract/holdback/modal/holdback-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/modal/holdback-modal.component.html
@@ -1,15 +1,14 @@
-<header>
-  <h1>Holdbacks exist for this Right</h1>
-  <button mat-icon-button (click)="close()">
-    <mat-icon svgIcon="close"></mat-icon>
-  </button>
-</header>
-<section>
-  <p>
-    <span>There are some holdbacks that exist for this Right.</span>
-    <ng-container *ngIf="data.withWarning">
-      <br /><span>You can still add this Right to your Selection.</span>
-    </ng-container>
-  </p>
-  <holdback-list [holdbacks]="data.holdbacks"></holdback-list>
-</section>
+<global-modal>
+  <header>
+    <h2>This title is subject to holdbacks.</h2>
+  </header>
+  <section>
+    <p>
+      <span>This title is subject to the following holdback(s) over the selected period.</span>
+      <ng-container *ngIf="data.withWarning">
+        <br /><span>You can still add these Terms to your Selection.</span>
+      </ng-container>
+    </p>
+    <holdback-list [holdbacks]="data.holdbacks"></holdback-list>
+  </section>
+</global-modal>
