7841 vanity metrics and table

--- a/styles/themes/blockframes.scss
+++ b/styles/themes/blockframes.scss
@@ -52,7 +52,7 @@ $light-theme: (
     500: #3C64F7,
     800: #0f31f0,
     contrast: (
-      200: #1f2a3b,
+      200: #ffffff,
       500: #ffffff,
       800: #ffffff,
     ),
