--- a/libs/event/src/lib/form/slate/slate.component.html
+++ b/libs/event/src/lib/form/slate/slate.component.html
@@ -13,7 +13,7 @@
     <ng-container *ngIf="(videos$ | async) as videos; else loading">
       <!-- Video -->
       <p>Add a video you'll want to screen.<br>If you can't find the videos you're looking for, you can upload them directly in
-      <a routerLink="/c/o/dashboard/files" target="_blank"><strong>My Files/Company/Videos</strong></a> section.</p>
+      <a routerLink="/c/o/dashboard/files" target="_blank">My Files/Company/Videos</a> section.</p>
       <mat-form-field appearance="outline">
         <mat-label>{{videos.length ? 'Select video to display' : 'You have no video to select'}}</mat-label>
         <mat-select formControlName="videoId" [disabled]="!videos.length">
