--- a/libs/ui/src/lib/carousel/carousel.component.scss
+++ b/libs/ui/src/lib/carousel/carousel.component.scss
@@ -6,12 +6,12 @@
 .row {
   display: flex;
   width: 100%;
-  overflow: overlay; // Cannot scroll if overflow hidden on Safari
+  overflow: auto; // Cannot scroll if overflow hidden on Safari
   scroll-behavior: smooth;
 }
 
 .row::-webkit-scrollbar {
-  height: 0; // Hide scrollbar this way instead of overflow hidden
+  display: none // Hide scrollbar this way instead of overflow hidden
 }
 
 .direction {
