--- a/libs/ui/src/lib/global-modal/global-modal.component.html
+++ b/libs/ui/src/lib/global-modal/global-modal.component.html
@@ -1,5 +1,5 @@
 <mat-dialog-header fxLayout fxLayoutAlign="end">
-  <button class="close" mat-icon-button (click)="close()">
+  <button mat-icon-button (click)="close()">
     <mat-icon svgIcon="close"></mat-icon>
   </button>
 </mat-dialog-header>
