--- a/libs/ui/src/lib/preview-file-modal/preview-file-modal.component.html
+++ b/libs/ui/src/lib/preview-file-modal/preview-file-modal.component.html
@@ -21,7 +21,7 @@
 
         <h3>Sorry</h3>
         <img class="unknown-type" asset="no_titles.svg" alt="Flying saucer">
-        <p>We don't know how to display this file. 4</p>
+        <p>We don't know how to display this file.</p>
         <p class="mat-caption">Supported files are: pdfs, images, and videos</p>
 
       </ng-container>
