Replace Term by Duration

--- a/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
+++ b/libs/contract/src/lib/contract/holdback/selection-modal/selection-modal.component.html
@@ -53,7 +53,7 @@
 
       <mat-divider></mat-divider>
 
-      <h3>Holdback Terms*</h3>
+      <h3>Holdback Duration*</h3>
       <div class="duration" [formGroup]="control.get('duration')">
         <mat-form-field appearance="outline">
           <mat-label>Licence Start Date</mat-label>
