--- a/libs/ui/src/lib/slider/slide/slide.component.scss
+++ b/libs/ui/src/lib/slider/slide/slide.component.scss
@@ -2,6 +2,13 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: fit-content;
   width: 100%;
+}
+
+.slide-content {
+  padding-bottom: 80px;
+}
+
+div {
+  height: 100%;
 }
