--- a/apps/festival/festival/src/app/marketplace/home/home.component.scss
+++ b/apps/festival/festival/src/app/marketplace/home/home.component.scss
@@ -78,14 +78,11 @@
       margin-bottom: 0px;
     }
   }
-
-  event-slide {
-    padding-bottom: 64px;
-  }
 }
 
 movie-slide {
-  height: 700px;
+  height: 100%;
+  min-height: 620px;
 }
 
 @include layout-bp(gt-sm) {
