--- a/libs/ui/src/lib/layout/footer/footer.component.html
+++ b/libs/ui/src/lib/layout/footer/footer.component.html
@@ -7,7 +7,7 @@
       <a mat-button [routerLink]="['/c/o/'+module+'/about']">About Us</a>
     </ng-container>
 
-    <a mat-button [routerLink]="['/c/o', module, 'contact']">Contact Us</a>
+    <a mat-button [routerLink]="['/c/o', module, 'contact']">Contact us</a>
     <a mat-button [routerLink]="['/c/o', module, 'terms']">Legal Terms</a>
     <a mat-button [routerLink]="['/c/o', module, 'privacy']">Privacy Policy</a>
   </div>
