--- a/libs/user/src/lib/auth/forms/password/password.component.html
+++ b/libs/user/src/lib/auth/forms/password/password.component.html
@@ -10,7 +10,7 @@
           matInput
           test-id="current-password"
           type="password"
-          placeholder="Current password"
+          placeholder="Current Password"
           formControlName="current"
         />
       </mat-form-field>
