--- a/libs/user/src/lib/auth/pages/identity/identity.component.html
+++ b/libs/user/src/lib/auth/pages/identity/identity.component.html
@@ -26,7 +26,7 @@
             <mat-label>First Name</mat-label>
             <input matInput type="text" placeholder="First Name" formControlName="firstName" required test-id="first-name"/>
             <mat-error *ngIf="form.get('firstName').hasError('required')">
-              First name is <strong>required</strong>.
+              First Name is <strong>required</strong>.
             </mat-error>
           </mat-form-field>
 
@@ -34,7 +34,7 @@
             <mat-label>Last Name</mat-label>
             <input matInput type="text" placeholder="Last Name" formControlName="lastName" required test-id="last-name"/>
             <mat-error *ngIf="form.get('lastName').hasError('required')">
-              Last name is <strong>required</strong>.
+              Last Name is <strong>required</strong>.
             </mat-error>
           </mat-form-field>
         </article>
