--- a/libs/organization/src/lib/organization/pages/request-access-pending/request-access-pending.component.html
+++ b/libs/organization/src/lib/organization/pages/request-access-pending/request-access-pending.component.html
@@ -3,7 +3,7 @@
 <section class="surface" fxLayout="column" fxLayoutAlign="center center">
   <img asset="congratulations.svg"/>
   <h1>We have received your request, we should grant you access asap!</h1>
-  <p class="mat-body-2">N.B.: You will receive a notification by email once your request is approved.</p>
-  <button mat-flat-button color="primary" (click)="refresh()">Refresh page.</button>
+  <p class="mat-body-2">You will receive a notification by email once your request is approved.</p>
+  <button mat-flat-button color="primary" (click)="refresh()">Refresh page</button>
   <button mat-button color="primary" (click)="logout()">Exit</button>
 </section>
