--- a/libs/user/src/lib/auth/pages/reset-password/reset-password.component.html
+++ b/libs/user/src/lib/auth/pages/reset-password/reset-password.component.html
@@ -8,18 +8,18 @@
     <h3>Reset your password</h3>
     <p>To reset your password, please fill in your email address.</p>
     <mat-form-field appearance="outline">
-      <mat-label>Email address</mat-label>
+      <mat-label>Email Address</mat-label>
       <input
         matInput
         type="email"
-        placeholder="Email address"
+        placeholder="Email Address"
         formControlName="email"
         required />
       <mat-error *ngIf="emailForm.get('email').hasError('email') && !emailForm.get('email').hasError('required')">
-        Please enter a <strong>valid</strong> email address.
+        Please enter a <strong>valid</strong> Email Address.
       </mat-error>
       <mat-error *ngIf="emailForm.get('email').hasError('required')">
-        Email is <strong>required</strong>
+        Email Address is <strong>required</strong>
       </mat-error>
     </mat-form-field>
     <div fxLayout="column" fxLayoutAlign="center center">
