--- a/apps/festival/festival/src/app/event/email/email.component.html
+++ b/apps/festival/festival/src/app/event/email/email.component.html
@@ -15,14 +15,14 @@
         <input test-id="firstName" matInput type="text" placeholder="First Name" formControlName="firstName" required />
         <mat-label>First Name</mat-label>
         <mat-error *ngIf="form.get('firstName').hasError('required')">
-          First name is <strong>required</strong>
+          First Name is <strong>required</strong>
         </mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline" fxFlex="0 1">
         <mat-label>Last Name</mat-label>
         <input test-id="lastName" matInput type="text" placeholder="Last Name" formControlName="lastName" required />
         <mat-error *ngIf="form.get('lastName').hasError('required')">
-          Last name is <strong>required</strong>
+          Last Name is <strong>required</strong>
         </mat-error>
       </mat-form-field>
     </div>
@@ -31,7 +31,7 @@
       <mat-label>Email Address</mat-label>
       <input test-id="email" matInput type="email" placeholder="Email Address" formControlName="email" required />
       <mat-error *ngIf="form.get('email').hasError('required')">
-        Email is <strong>required</strong>
+        Email Address is <strong>required</strong>
       </mat-error>
     </mat-form-field>
     <footer fxLayout="column" fxLayoutAlign="center center">
