--- a/libs/organization/src/lib/organization/pages/organization-pending/organization-pending.component.html
+++ b/libs/organization/src/lib/organization/pages/organization-pending/organization-pending.component.html
@@ -5,9 +5,20 @@
   <mat-card>
     <mat-card-content fxLayout="column" fxLayoutAlign="space-around center">
       <ng-container *ngIf="orgActive$ | async as active">
-        <p class="mat-body-2">
+        <ng-container *ngIf="app === 'festival' "class="mat-body-2">
+          <p>
+            The Archipel Market team will come back to you
+          </p>
+          <p>
+            within <b>less than 15 minutes</b> <br> during an open screening session,
+          </p>
+          <p class="p-margin">
+            <b>48 hours otherwise.</b>
+          </p>
+        </ng-container>
+        <p *ngIf="app !== 'festival' "class="mat-body-2">
           The {{ app | appName }} team <br> will come back to you within <b>48 hours</b>.
-        </p>
+         </p>
         <auth-data-validation [organization]="active"></auth-data-validation>
       </ng-container>
     </mat-card-content>
