--- a/libs/organization/src/lib/organization/pages/organization-pending/organization-pending.component.scss
+++ b/libs/organization/src/lib/organization/pages/organization-pending/organization-pending.component.scss
@@ -24,8 +24,12 @@ h1 {
   margin-bottom: 32px;
 }
 
+.p-margin {
+  margin-bottom: 20px;
+}
+
 mat-card-content {
-  padding: 40px 72px 10px;
+  padding: 32px 72px 10px;
 }
 
 mat-card {
