--- a/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
+++ b/libs/user/src/lib/auth/components/terms-conditions/terms-conditions.component.html
@@ -781,7 +781,7 @@
           </article>
 
           <article>
-            <h3>Article 11 - Financial conditions</h3>
+            <h3 id="article11">Article 11 - Financial conditions</h3>
             <p>
               Access to and use of the Service is free.
             </p>
