UI mobile fixes

--- a/libs/movie/src/lib/movie/components/header/header.component.html
+++ b/libs/movie/src/lib/movie/components/header/header.component.html
@@ -3,7 +3,7 @@
   fxLayout="column"
   fxLayoutGap="20px"
   *ngIf="movieView"
-  [bgRef]="movieView.banner"
+  [bgRef]="(xs$ | async) ? null : movieView.banner"
   bgAsset="empty_banner.png"
   bgTheme="dark"
   >
