--- a/libs/movie/src/lib/movie/marketplace/main/main.component.html
+++ b/libs/movie/src/lib/movie/marketplace/main/main.component.html
@@ -97,7 +97,7 @@
     <h3>Directors</h3>
     <article grid>
       <ng-container *ngFor="let director of movie.directors">
-        <title-credit-card [col]="3" [credit]="director" type="director"></title-credit-card>
+        <title-credit-card [col]="(ltMd$ | async) ? 4 : 3" [credit]="director" type="director"></title-credit-card> 
       </ng-container>
     </article>
   </section>
@@ -113,10 +113,10 @@
     <h3>Festivals & Awards</h3>
     <article grid>
       <ng-container *ngFor="let prize of movie.prizes">
-        <title-prize-card [col]="3" [prize]="prize"></title-prize-card>
+        <title-prize-card [col]="(ltMd$ | async) ? 4 : 3" [prize]="prize"></title-prize-card>
       </ng-container>
       <ng-container *ngFor="let prize of movie.customPrizes">
-        <title-prize-card [col]="3" [prize]="prize"></title-prize-card>
+        <title-prize-card [col]="(ltMd$ | async) ? 4 : 3" [prize]="prize"></title-prize-card>
       </ng-container>
     </article>
 
