--- a/apps/festival/festival/src/app/marketplace/title/list/list.component.scss
+++ b/apps/festival/festival/src/app/marketplace/title/list/list.component.scss
@@ -1,3 +1,5 @@
+@import "@angular/flex-layout/mq";
+
 mat-form-field {
   width: 100%;
 }
@@ -39,4 +41,10 @@ list-page-progress {
 
 list-page-description, pdf-export button {
   margin: 24px;
+}
+
+@include layout-bp(lt-md) {
+  movie-card {
+    margin-bottom: 24px;
+  }
 }
