--- a/libs/ui/src/lib/list/page/list-page.component.scss
+++ b/libs/ui/src/lib/list/page/list-page.component.scss
@@ -1,3 +1,5 @@
+@import "@angular/flex-layout/mq";
+
 header {
   padding: clamp(16px, 5vw, 48px);
   padding-bottom: 0px; // Remove padding for filters
@@ -33,6 +35,14 @@ section {
 
 .export-section {
   margin-bottom: 24px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+}
+
+.with-export-button {
+  justify-content: space-between;
+  align-items: center;
 }
 
 span.mat-body-2 {
@@ -41,4 +51,11 @@ span.mat-body-2 {
 
 .item {
   margin-bottom: 28px;
+}
+
+@include layout-bp(xs) {
+  .export-section {
+    flex-direction: column;
+    align-items: center;
+  }
 }
