--- a/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.scss
+++ b/libs/analytics/src/lib/components/metric-card-list/metric-card-list.component.scss
@@ -7,5 +7,23 @@ ul {
     display: flex;
     flex-direction: column;
     text-align: center;
+
+    header {
+      background-color: var(--primary-lighter);
+      border-radius: 4px;
+      padding: 8px 0;
+    
+      mat-icon {
+        display: block;
+        margin: auto;
+        color: var(--primary-lighter-contrast);
+      }
+    }
+    
+    p {
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      margin-bottom: 0px;
+    }
   }
 }
