--- a/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
+++ b/apps/festival/festival/src/app/dashboard/analytics/buyer/buyer-analytics.component.html
@@ -24,11 +24,7 @@
 </header>
 
 <section>
-  <analytics-metric-card-list *ngIf="aggregated$ | async as analytics">
-    <ng-container *ngFor="let event of events">
-      <analytics-metric-card [title]="event.title" [value]="analytics[event.name]" [icon]="event.icon"></analytics-metric-card>
-    </ng-container>
-  </analytics-metric-card-list>
+  <analytics-metric-card-list [cards]="aggregatedCards$ | async"></analytics-metric-card-list>
 
   <article>
     <h3>Buyer was interested in these titles</h3>
