--- a/libs/analytics/src/lib/components/line-chart/line-chart.component.html
+++ b/libs/analytics/src/lib/components/line-chart/line-chart.component.html
@@ -18,6 +18,7 @@
       [xaxis]="lineChartOptions.xaxis"
       [dataLabels]="lineChartOptions.dataLabels"
       [stroke]="lineChartOptions.stroke"
+      [markers]="lineChartOptions.markers"
     ></apx-chart>
   </ng-container>
 </ng-container>
