--- a/libs/ui/src/lib/global-modal/global-modal.component.scss
+++ b/libs/ui/src/lib/global-modal/global-modal.component.scss
@@ -6,11 +6,14 @@
  // So, in exemple, count 48 as 72px
 .sizeL {
   padding: 48px;
-  width: 80vw;
-  height: 80vh;
+  width: calc(80vw - 96px);
+  height: calc(80vh - 96px);
+  max-height: 750px;
+  max-width: 1500px;
 
   .mat-dialog-content {
-    max-height: calc(80vh - (72px * 2));
+    height: calc(80vh - 240px);
+    max-height: calc(750px - 144px);
   }
 }
 
@@ -18,12 +21,17 @@
   padding: 24px;
   width: 60vw;
   height: 60vh;
+  max-height: 550px;
+  max-width: 1000px;
 
   .mat-dialog-content {
-    max-height: calc(60vh - (48px * 2));
+    height: calc(60vh - 96px);
+    max-height: calc(550px - 96px);
   }
 }
 
 .sizeS {
-  width: 30vw;
+  min-width: 30vw;
+  max-height: 350px;
+  max-width: 600px;
 }
