--- a/libs/ui/src/lib/cell-modal/cell-modal.component.html
+++ b/libs/ui/src/lib/cell-modal/cell-modal.component.html
@@ -1,6 +1,6 @@
 <global-modal>
-  <header fxLayout="column">
-    <h2 >{{ data.title }}</h2>
+  <header fxLayout fxLayoutAlign="center">
+    <h2>{{ data.title }}</h2>
   </header>
 
   <section fxLayout="column" fxLayoutAlign="start center">
