--- a/libs/media/src/lib/file/preview/preview.component.html
+++ b/libs/media/src/lib/file/preview/preview.component.html
@@ -1,21 +1,17 @@
-<header fxLayout fxLayoutAlign="end">
-  <button mat-icon-button (click)="close()">
-    <mat-icon svgIcon="close"></mat-icon>
-  </button>
-</header>
-
-<ng-container [ngSwitch]="data.ref.storagePath | fileType">
-  <ng-container *ngSwitchCase="'image'">
-    <img [ref]="data.ref" asset="no_titles.svg" />
-  </ng-container>
-  <ng-container *ngSwitchCase="'pdf'">
-    <pdf-viewer [ref]="data.ref"></pdf-viewer>
-  </ng-container>
-  <ng-container *ngSwitchCase="'video'">
-    <video-viewer [ref]="data.ref"></video-viewer>
-  </ng-container>
-  <ng-container *ngSwitchDefault>
-    <p>Sorry, we don't know how to display this file.</p>
-    <p>Currently supported file are: pdf, images, and videos</p>
-  </ng-container>
-</ng-container>
+<global-modal>
+  <ng-container [ngSwitch]="data.ref.storagePath | fileType">
+    <ng-container *ngSwitchCase="'image'">
+      <img [ref]="data.ref" asset="no_titles.svg" />
+    </ng-container>
+    <ng-container *ngSwitchCase="'pdf'">
+      <pdf-viewer [ref]="data.ref"></pdf-viewer>
+    </ng-container>
+    <ng-container *ngSwitchCase="'video'">
+      <video-viewer [ref]="data.ref"></video-viewer>
+    </ng-container>
+    <ng-container *ngSwitchDefault>
+      <p>Sorry, we don't know how to display this file.</p>
+      <p>Currently supported file are: pdf, images, and videos</p>
+    </ng-container>
+  </ng-container>  
+</global-modal>
