--- a/libs/import/src/lib/table-extracted-elements/view-import-errors/view-import-errors.component.scss
+++ b/libs/import/src/lib/table-extracted-elements/view-import-errors/view-import-errors.component.scss
@@ -1,3 +1,7 @@
+h2 {
+  text-align: center;
+}
+
 .example-headers-align .mat-expansion-panel-header-title,
 .example-headers-align .mat-expansion-panel-header-description {
   flex-basis: 0;
