--- a/libs/event/src/lib/form/shell/shell.component.html
+++ b/libs/event/src/lib/form/shell/shell.component.html
@@ -30,7 +30,7 @@
         </mat-chip-list>
       </div>
       <div fxLayout fxLayoutAlign="end center" fxLayoutGap="8px">
-        <button type="button" mat-button color="warn" (click)="remove()">Delete</button>
+        <button type="button" mat-button color="warn" (click)="remove()" test-id="event-delete">Delete</button>
         <ng-container *ngIf="form.dirty else disabled">
           <button type="submit" mat-stroked-button color="primary" (click)="save()" test-id="event-save">Save</button>
         </ng-container>
