UI mobile review correction

--- a/libs/movie/src/lib/movie/marketplace/artistic/artistic.component.html
+++ b/libs/movie/src/lib/movie/marketplace/artistic/artistic.component.html
@@ -3,9 +3,9 @@
 
   <section *ngIf="movie.cast.length">
     <h3>Cast Members</h3>
-    <article grid>
+    <article class="card-grid">
       <ng-container *ngFor="let cast of movie.cast">
-        <title-credit-card [col]="(ltMd$ | async) ? 4 : 3" [credit]="cast" type="cast"></title-credit-card>
+        <title-credit-card  [credit]="cast" type="cast"></title-credit-card>
       </ng-container>
     </article>
     
@@ -14,9 +14,9 @@
 
   <section *ngIf="movie.crew.length">
     <h3>Crew Members</h3>
-    <article grid>
+    <article class="card-grid">
       <ng-container *ngFor="let crew of movie.crew">
-        <title-credit-card [col]="(ltMd$ | async) ? 4 : 3" [credit]="crew" type="crew"></title-credit-card>
+        <title-credit-card [credit]="crew" type="crew"></title-credit-card>
       </ng-container>
     </article>
 
