--- a/libs/movie/src/lib/movie/marketplace/artistic/artistic.component.scss
+++ b/libs/movie/src/lib/movie/marketplace/artistic/artistic.component.scss
@@ -12,3 +12,10 @@ mat-divider {
   border-bottom: solid 1px var(--foreground-divider);
   margin-bottom: 16px;
 }
+
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 16px;
+  margin: 24px;
+}
