--- a/libs/ui/src/lib/list/page/list-page.component.html
+++ b/libs/ui/src/lib/list/page/list-page.component.html
@@ -49,7 +49,7 @@
       <ng-container *ngIf="!listView; else displayList">
         <div grid [@fadeList]="items.length">
           <ng-container *ngFor="let item of items; trackBy:trackById">
-            <div [col]="(ltMd$ | async) ? 4 : 3">
+            <div class="grid-item" [col]="(ltMd$ | async) ? 4 : 3">
 
               <!-- INSERT CARD -->
               <ng-template [ngTemplateOutlet]="cardTemplate" [ngTemplateOutletContext]="{$implicit: item}">
