--- a/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
+++ b/libs/user/src/lib/auth/components/signin-form/signin-form.component.html
@@ -29,7 +29,10 @@
       <a type="button" mat-button routerLink="../reset-password" class="forgot-password">Forgot your password?</a>
       <div fxLayout="column" fxLayoutAlign="center center">
         <button class="submit" type="submit" mat-flat-button color="accent" test-id="submit"><ng-content select="[buttonText]"></ng-content></button>
-        <a id="tosignup" type="button" color="accent" mat-button routerLink="/auth/identity">Not having an account? <br fxHide.gt-xs> Sign up here.</a>
+        <a id="tosignup" type="button" color="accent" mat-button routerLink="/auth/identity">
+          <span>Not having an account? </span> 
+          <span>Sign up here.</span>
+        </a>
       </div>
     </form>
   </mat-card>
